--- a/api-reference/on-message.mdx
+++ b/api-reference/on-message.mdx
@@ -1,5 +1,5 @@
 ---
-title: "@on_message"
+title: "on_message"
 ---
 
 Framework agnostic decorator to react to messages coming from the UI.
@@ -20,7 +20,7 @@ The decorated function is called every time a new message is received.
 
 <RequestExample>
 ```python
-from chainlit import @on_message
+from chainlit import on_message
 
 @on_message
 def main(message: str):
