--- a/api-reference/send-message.mdx
+++ b/api-reference/send-message.mdx
@@ -34,7 +34,7 @@ If a project ID is configured, the messages will be uploaded to the cloud storag
 
 <RequestExample>
 ```python
-from chainlit import send_message, @on_message
+from chainlit import send_message, on_message
 
 @on_message
 def main(message: str):
