--- a/api-reference/send-text-document.mdx
+++ b/api-reference/send-text-document.mdx
@@ -20,7 +20,7 @@ This function uploads a text document to the chatbot UI. If a project ID is conf
 
 <RequestExample>
 ```python
-from chainlit import send_message, send_text_document, @on_message
+from chainlit import send_message, send_text_document, on_message
 
 @on_message
 def main(message: str):
@@ -28,7 +28,7 @@ def main(message: str):
 
     send_message(
       author="Test",
-      content=f"The answer is foo, according to source bar.",
+      content="The answer is foo, according to source bar.",
       final=True, 
     )
 ```
