--- a/examples/mrkl.mdx
+++ b/examples/mrkl.mdx
@@ -37,5 +37,5 @@ def load():
     return initialize_agent(tools, llm, agent="chat-zero-shot-react-description", verbose=True)
 ```
 
-The main change is that we grouped all the instantiation logic in the `load` function and decorated it with `@langchain_factory`.
+The main change is that we grouped all the instantiation logic in the `load` function and decorated it with [@langchain_factory](/api-reference/langchain-factory).
 You can return any kind of instance from LangChain (Chain, LLM, Agent...).
