--- a/create-app.mdx
+++ b/create-app.mdx
@@ -94,5 +94,10 @@ def main(message: str):
 chainlit run app.py
 ```
 
+You can also automatically reload the UI on file change with the `-w` flag like so:
+```bash
+chainlit run app.py -w
+```
+
 Once the UI is ready, you can type in messages like so:
 ![SQL App](/images/sql-app.png)
