--- a/api-reference/on-message.mdx
+++ b/api-reference/on-message.mdx
@@ -7,23 +7,20 @@ The decorated function is called every time a new message is received.
 
 ### Parameters
 
-<ParamField path="func" type="Callable[[str], Any]">
-  The function to be called when a new message is received.
-  The function takes the string message as a parameter.
+<ParamField path="message" type="str">
+  The message coming from the UI.
 </ParamField>
 
-### Returns
-
-<ResponseField name="on_message" type="Callable[[str], Any]" required>
-  The decorated on_message function.
-</ResponseField>
+<ParamField path="user_env" type="Dict[str, str]">
+  The user env variables if defined in the config file, else an empty dict.
+</ParamField>
 
 <RequestExample>
 ```python
 from chainlit import on_message
 
 @on_message
-def main(message: str):
+def main(message: str, user_env):
   # do something
 ```
 </RequestExample>
