--- a/examples/qa.mdx
+++ b/examples/qa.mdx
@@ -11,15 +11,16 @@ Example inspired from the [LangChain doc](https://huggingface.co/spaces/hwchase1
 from langchain.embeddings.openai import OpenAIEmbeddings
 from langchain.text_splitter import CharacterTextSplitter
 from langchain.vectorstores import Chroma
-from langchain.chains import VectorDBQAWithSourcesChain
+from langchain.chains import RetrievalQAWithSourcesChain
 from langchain.chat_models import ChatOpenAI
 from langchain.prompts.chat import (
     ChatPromptTemplate,
     SystemMessagePromptTemplate,
     HumanMessagePromptTemplate,
 )
-from chainlit import send_text_document, langchain_factory, langchain_postprocess
 import os
+from chainlit import send_text_document, langchain_factory, langchain_postprocess
+
 os.environ["OPENAI_API_KEY"] = "OPENAI_API_KEY"
 
 with open('./state_of_the_union.txt') as f:
@@ -53,14 +54,12 @@ messages = [
 prompt = ChatPromptTemplate.from_messages(messages)
 chain_type_kwargs = {"prompt": prompt}
 
+
 @langchain_factory
 def load():
-    chain = VectorDBQAWithSourcesChain.from_chain_type(
-        ChatOpenAI(temperature=0),
-        chain_type="stuff",
-        vectorstore=docsearch,
-        chain_type_kwargs=chain_type_kwargs,
-    )
+    chain = RetrievalQAWithSourcesChain.from_chain_type(ChatOpenAI(
+        temperature=0), chain_type="stuff", retriever=docsearch.as_retriever())
+
     return chain
 
 
@@ -69,10 +68,12 @@ def process_response(res):
     output = res["answer"]
     sources = res["sources"]
     if sources:
+        # Add the sources to the message
         output += f"\nSources: {sources}"
         for source in sources.split(","):
             name = source.strip()
             index = [m["source"] for m in metadatas].index(name)
+            # Send the source document referenced in the message
             send_text_document(text=texts[index], name=name)
     return output
 ```
