--- a/installation.mdx
+++ b/installation.mdx
@@ -10,3 +10,11 @@ You can install the package with:
 ```bash
 pip install chainlit
 ```
+
+To try if everything works correctly run:
+```bash
+chainlit hello
+```
+
+This should spawn the chainlit UI and ask for your name like so:
+![Hello](/images/hello.png)
