--- a/debug.mdx
+++ b/debug.mdx
@@ -1,16 +1,19 @@
 ---
-title: Debug prompts
+title: Debugging Prompts in Chainlit
 ---
 
-As your app becomes more complex (Chain of Thoughts, LangChain...), understanding how a specific answer has been generated becomes painful.
-To address that issue, Chainlit introduced the `Show steps` button.
+As your app grows in complexity (e.g. Chain of Thoughts, LangChain), understanding the process behind generating a specific answer can become challenging.
 
-Here is a screenshot from the [LangChain MRKL](/examples/mrkl) example:
+To help you overcome this issue, Chainlit allows you to easily explore the reasoning process right from the user interface.
+
+Take a look at this screenshot from the [LangChain MRKL](/examples/mrkl) example:
 ![Debug](/images/debug.png)
 
-We can see that several intermediate steps are required to answer the original question.
-Being able to scroll through the steps in the UI is helpful, but being able to iterate on the prompt of each step on the fly is even more powerful.  
+It's evident that several intermediate steps are needed to answer the initial question. Additionally, each step might involve another tool, resulting in a tree-like structure.
 
-That is exactly what the `edit button` is for. Clicking on it opens a prompt playground where you can modify and iterate on the prompt:
+Chainlit simplifies this process by enabling you to visualize and navigate through these otherwise complicated reasoning pathways.
+
+While scrolling through the steps in the user interface is useful, having the ability to iterate on the prompt for each step in real-time is even more powerful.
+
+That's where the `pen button` comes in. Clicking on it opens a prompt playground, allowing you to modify and iterate on the prompt as needed:
 ![Playground](/images/playground.png)
-
