--- a/installation.mdx
+++ b/installation.mdx
@@ -5,7 +5,7 @@ title: Installation
 Chainlit requires `python>=3.7`.
 
 
-<Warning>The Chainlit package has not yes been publicly released.</Warning>
+<Warning>The Chainlit package has not yet been publicly released.</Warning>
 You can install the package with:
 ```bash
 pip install chainlit
@@ -18,3 +18,13 @@ chainlit hello
 
 This should spawn the chainlit UI and ask for your name like so:
 ![Hello](/images/hello.png)
+
+## Next steps
+
+<Card title="With LangChain" icon="link" href="/langchain">
+  Learn on how to use Chainlit with LangChain.
+</Card>
+
+<Card title="With PurePython" icon="link" href="/pure-python">
+   Learn on how to use Chainlit with any python code.
+</Card>
