--- a/streaming/langchain.mdx
+++ b/streaming/langchain.mdx
@@ -9,7 +9,7 @@ llm = OpenAI(temperature=0, streaming=True)
 ```
 
 ## MRKL demo
-<video controls height="200" src="/images/langchain_streaming.mp4" />
+<video controls height="200" src="https://chainlit-cloud.s3.eu-west-3.amazonaws.com/docs/langchain_streaming.mp4?response-content-disposition=inline&X-Amz-Security-Token=IQoJb3JpZ2luX2VjEEsaCWV1LXdlc3QtMyJIMEYCIQCRErM05YMuE4XLkIlgIx5rlrLKLpKjwNr63YH2VOzwIwIhANm5d%2FS61kUn8lCFsaPAplfKFSQ%2BGPUaVTN88QIoepBPKugCCEQQAxoMNjI4NDc2NzY0MjE5IgxJJrF1OdhEejDlkdYqxQJrcuIE3sVMSES6ahSj%2FN6ubImDMe4CT7o%2FBQ7Jle1%2FP9FHR5zGZuT40cfwhknymqs19rSaje75XR37zkCcX1hpopKvvmI872bJZ%2BC9cKjXGxmzurDQjo3AgM7mtvmYKGx2JI5LNYhkVdBYPe%2Ff3vLBlOWJKNBivjF4gk8SpEfnx8iKhGk4SGTsVhE3FwOk8E6OnEklBdnkpaH4%2BsYaH1VYLMPuZ5%2BD7y%2Fb0s1tAQasuF0Db1ejfpxyEdekJsKtzTQUpmpas9WL02%2F4Ej6hKvy8TF7XVuN3DhRwgU%2FD7VgussSHTwgFtCcXGDPsXhwvzUpFKNVNy2ixpVZe6E7B9EfKrJn6R6%2F%2F%2BHz6PHSfS44MKCd7A5AQXcPZ41HXiRfMh4OCGbGHQTWKVNHrPRkk%2BYic%2BvAqhXtE0CprKv3%2FAKKxDGvd%2FPE%2BMMXQ9KEGOrICNFaKKARtYXfdorRCqSH%2Bc62I3Y6llpg4IXi8MM%2Fv9B5qXJhfsR3KkN9bEKNGh282pLhMNYS3Rj2D2UCf2oKOwIqh%2FiRMueCnORimuKMEx0nBvgL5PDDLgVOezS1vncWZybn8VlT8f60jZCpHeCFaYJNtJNHwbUqipG%2Bf%2BFX144eLQQ6bkqb9FZIZiU9CAjgUX%2FOhSNIH74SVjYEcSK92zTsVc9tq3yU8PeqT5011Ll1dw9XX4cSqB4nmt8UuRyuUuMIFEYVJHmn%2FVDbZsDwfLmVCrw84wVMGZ4sctUrPU8KABa7u%2BGeU6rsmhkrRxa9CD8VQL5yegcs0LpXa3pp5XPU8XAJ79WeBmKljQm66iGFXz7mpU0mDhhgXjio5AEdjmyezmj4OYd9RdJhVGv2A2aZH&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20230417T110744Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAZEVBCMA5RFC2ELBY%2F20230417%2Feu-west-3%2Fs3%2Faws4_request&X-Amz-Signature=fddcb3ec5d89ada9b6099ba6c68fc95d3256f35f5dc042d0ce168fb87561f38f" />
 
 
 
