--- a/api-reference/ask-for-input.mdx
+++ b/api-reference/ask-for-input.mdx
@@ -1,16 +1,17 @@
 ---
-title: "ask_user"
+title: "ask_for_input"
 ---
 
-Asks a question to the user and waits for the answer
+Ask for the user input before continuing.
+If the user does not answer in time (see timeout), a TimeoutError will be raised or None will be returned depending on raise_on_timeout.
 If a project ID is configured, the messages will be uploaded to the cloud storage.
 
 ### Parameters
-<ParamField path="author" type="str">
-  The author of the message, this will be used in the UI.
-</ParamField>
 <ParamField path="content" type="str">
   The content of the message.
+</ParamField>
+<ParamField path="author" type="str" optional>
+  The author of the message, defaults to the chatbot name. See [Chainlit config](/cloud/config).
 </ParamField>
 <ParamField path="timeout" type="int" optional>
   The number of seconds to wait for an answer before raising a TimeoutError.
@@ -21,17 +22,14 @@ If a project ID is configured, the messages will be uploaded to the cloud storag
 
 <RequestExample>
 ```python
-from chainlit import send_message, ask_user, on_chat_start
-
-bot_name = "Example"
+from chainlit import send_message, ask_for_input, on_chat_start
 
 
 @on_chat_start
-def main(env):
-    res = ask_user(author=bot_name, content="What is your name?", timeout=10)
+def main():
+    res = ask_for_input(content="What is your name?")
     if res:
         send_message(
-            author=bot_name,
             content=f"Your name is: {res['content']}",
         )
 ```
