--- a/streaming/langchain.mdx
+++ b/streaming/langchain.mdx
@@ -8,7 +8,7 @@ Chainlit supports LangChain's stream API natively. To use streaming just pass `s
 llm = OpenAI(temperature=0, streaming=True)
 ```
 
-## MRKL demo
+## Demo
 <video controls height="200" src="https://chainlit-cloud.s3.eu-west-3.amazonaws.com/docs/langchain_streaming.mp4" />
 
 
