--- a/streaming/python.mdx
+++ b/streaming/python.mdx
@@ -21,18 +21,16 @@ settings = {
     "stop": ["```"]
 }
 
-bot_name = "Chatbot"
-
 prompt = """Answer the following question:
 {question}
 """
 
 
 @on_message
-def main(message: str, env):
+def main(message: str):
     msg = ""
     fromatted_prompt = prompt.format(question=message)
-    start_stream(author=bot_name)
+    start_stream()
 
     for resp in openai.Completion.create(model=model_name,
                                          prompt=fromatted_prompt,
@@ -43,13 +41,11 @@ def main(message: str, env):
         msg += token
 
     send_message(
-        author=bot_name,
         content=msg,
         prompt=fromatted_prompt,
         llm_settings=LLMSettings(model_name=model_name, **settings),
         end_stream=True
     )
-
 ```
 
 ## Result
