add example streaming chat completion

--- a/document-management/introduction.mdx
+++ b/document-management/introduction.mdx
@@ -13,6 +13,7 @@ Chainlit provides two primary methods for sending documents to the user interfac
 2. **send_text_document**: This function uploads a text document to the chatbot UI. You can find the detailed documentation [here](/api-reference/send-text-document).
 
 These methods allow you to send various types of documents, such as images and text files, and control how they are displayed in the UI.
+If your document type is not yet supported, let us know on our Discord!
 
 ## Receiving Documents
 
