--- a/examples/qa.mdx
+++ b/examples/qa.mdx
@@ -111,5 +111,5 @@ Then, we use [@langchain_postprocess](/api-reference/langchain-postprocess) (whi
 - Add the relevant sources to the final answer
 - Send the sources to the UI
 
-Final result:
+## Result
 ![QA](/images/qa.png)
