--- a/debug.mdx
+++ b/debug.mdx
@@ -1,5 +1,5 @@
 ---
-title: Debugging Prompts in Chainlit
+title: Debugging Prompts
 ---
 
 As your app grows in complexity (e.g. Chain of Thoughts, LangChain), understanding the process behind generating a specific answer can become challenging.
