--- a/concepts/streaming/langchain.mdx
+++ b/concepts/streaming/langchain.mdx
@@ -1,5 +1,5 @@
 ---
-title: With LangChain
+title: LangChain Streaming
 ---
 
 Chainlit supports LangChain's stream API natively. To use streaming just pass `streaming=True` when instantiating the LLM:
