--- a/api-reference/send-local-image.mdx
+++ b/api-reference/send-local-image.mdx
@@ -14,18 +14,19 @@ This function sends a local image to the chatbot UI. If a project ID is configur
   The name of the image to be displayed in the UI.
 </ParamField>
 
-<ParamField path="display" type="DocumentDisplay" optional>
-  Determines how the image should be displayed in the UI. Choices are "side" (default), "inline", or "page".
+<ParamField path="display" type="ElementDisplay" optional>
+  Determines how the image element should be displayed in the UI. Choices are "side" (default), "inline", or "page".
 </ParamField>
 
 <RequestExample>
 ```python
-from chainlit import send_message, send_local_image, on_message
+import chainlit as cl
 
-@on_message
+
+@cl.on_message
 def main(message: str):
-    send_local_image(path="./foo.jpg", name="foo", display="inline")
+    cl.send_local_image(path="./foo.jpg", name="foo", display="inline")
 
-    send_message(content="Look at this image! foo")
+    cl.send_message(content="Look at this image! foo")
 ```
 </RequestExample>
