--- a/concepts/streaming/python.mdx
+++ b/concepts/streaming/python.mdx
@@ -1,5 +1,5 @@
 ---
-title: With Python
+title: Python Streaming
 ---
 
 Chainlit supports streaming with any Python code. Here is an example with `openai`.
