--- a/examples/mrkl.mdx
+++ b/examples/mrkl.mdx
@@ -10,12 +10,12 @@ from langchain import OpenAI, LLMMathChain, SerpAPIWrapper
 from langchain.agents import initialize_agent, Tool
 from langchain.chat_models import ChatOpenAI
 import os
-from chainlit import langchain_factory
+import chainlit as cl
 
 os.environ["OPENAI_API_KEY"] = "OPENAI_API_KEY"
 os.environ["SERPAPI_API_KEY"] = "SERPAPI_API_KEY"
 
-@langchain_factory
+@cl.langchain_factory
 def load():
     llm = ChatOpenAI(temperature=0)
     llm1 = OpenAI(temperature=0)
