--- a/examples/qa.mdx
+++ b/examples/qa.mdx
@@ -100,14 +100,14 @@ def process_response(res):
             # Get the index of the source document
             index = [m["source"] for m in metadatas].index(name)
             text = texts[index]
-            # Send the source document referenced in the message
-            cl.send_text_document(text=text, name=name)
+            # Send the source element referenced in the message
+            cl.send_text(text=text, name=name)
 
     return answer
 ````
 
 We are making use of the [@langchain_factory](/api-reference/langchain-factory) decorator to tell Chainlit on how to get the LangChain agent.
-Then, we use [@langchain_postprocess](/api-reference/langchain-postprocess) (which takes the raw response from the agent) as well as [send_text_document](/api-reference/send-text-document) to:
+Then, we use [@langchain_postprocess](/api-reference/langchain-postprocess) (which takes the raw response from the agent) as well as [send_text](/api-reference/send-text) to:
 - Add the relevant sources to the final answer
 - Send the sources to the UI
 
