--- a/api-reference/langchain-postprocess.mdx
+++ b/api-reference/langchain-postprocess.mdx
@@ -17,7 +17,7 @@ This function is useful to post-process the response of a LangChain object insta
 </ResponseField>
 
 <RequestExample>
-```python
+```python Code Example
 from langchain import OpenAI, LLMMathChain
 from chainlit import langchain_factory, langchain_postprocess
 
