--- a/api-reference/langchain-run.mdx
+++ b/api-reference/langchain-run.mdx
@@ -21,7 +21,7 @@ Use when your agent run method has custom parameters.
 </ResponseField>
 
 <RequestExample>
-```python
+```python Code Example
 from langchain import OpenAI, LLMMathChain
 from chainlit import langchain_factory, langchain_run
 
