--- a/api-reference/on-chat-start.mdx
+++ b/api-reference/on-chat-start.mdx
@@ -5,7 +5,7 @@ title: "on_chat_start"
 Hook to react to the user websocket connection event.
 
 <RequestExample>
-```python
+```python Code Example
 from chainlit import send_message, ask_for_input, on_chat_start
 
 
