--- a/api-reference/on-message.mdx
+++ b/api-reference/on-message.mdx
@@ -12,7 +12,7 @@ The decorated function is called every time a new message is received.
 </ParamField>
 
 <RequestExample>
-```python
+```python Code Example
 from chainlit import on_message
 
 @on_message
