--- a/api-reference/send-local-image.mdx
+++ b/api-reference/send-local-image.mdx
@@ -19,9 +19,8 @@ This function sends a local image to the chatbot UI. If a project ID is configur
 </ParamField>
 
 <RequestExample>
-```python
+```python Code Example
 import chainlit as cl
-
 
 @cl.on_message
 def main(message: str):
