--- a/api-reference/send-message.mdx
+++ b/api-reference/send-message.mdx
@@ -30,7 +30,7 @@ If a project ID is configured, the messages will be uploaded to the cloud storag
 </ParamField>
 
 <RequestExample>
-```python
+```python Code Example
 from chainlit import send_message, on_message
 
 @on_message
