--- a/concepts/elements/ask-element.mdx
+++ b/concepts/elements/ask-element.mdx
@@ -4,9 +4,8 @@ title: Ask Element
 
 The ask element is used to ask the user for a file.
 
-```python
+```python Code Example
 import chainlit as cl
-
 
 @cl.on_chat_start
 def start():
