--- a/concepts/streaming/langchain.mdx
+++ b/concepts/streaming/langchain.mdx
@@ -4,7 +4,7 @@ title: LangChain Streaming
 
 Chainlit supports LangChain's stream API natively. To use streaming just pass `streaming=True` when instantiating the LLM:
 
-```python
+```python Code Example
 llm = OpenAI(temperature=0, streaming=True)
 ```
 
