--- a/concepts/user-session.mdx
+++ b/concepts/user-session.mdx
@@ -7,13 +7,13 @@ title: User Session
 
 To use the `user_session`, first import it:
 
-```python
+```python Code Example
 from chainlit import user_session
 ```
 
 To get a value from the user's session, call the `get` method:
 
-```python
+```python Code Example
 value = user_session.get(key)
 ```
 
@@ -21,7 +21,7 @@ The `key` parameter is a string that identifies the value to retrieve. If the ke
 
 To set a value in the user's session, call the `set` method:
 
-```python
+```python Code Example
 user_session.set(key, value)
 ```
 
