--- a/examples/auto-gpt.mdx
+++ b/examples/auto-gpt.mdx
@@ -5,7 +5,7 @@ title: Auto GPT
 Example inspired from the [LangChain doc](https://python.langchain.com/en/latest/use_cases/autonomous_agents/autogpt.html)
 
 ## Code
-```python
+```python Code Example
 from langchain.utilities import SerpAPIWrapper
 from langchain.agents import Tool
 from langchain.tools.file_management.write import WriteFileTool
