--- a/examples/mrkl.mdx
+++ b/examples/mrkl.mdx
@@ -5,7 +5,7 @@ title: MRKL
 Example inspired from the [LangChain doc](https://python.langchain.com/en/latest/modules/agents/agents/examples/mrkl_chat.html)
 
 ## Code
-```python
+```python Code Example
 from langchain import OpenAI, LLMMathChain, SerpAPIWrapper
 from langchain.agents import initialize_agent, Tool
 from langchain.chat_models import ChatOpenAI
