--- a/pure-python.mdx
+++ b/pure-python.mdx
@@ -4,7 +4,7 @@ title: Share Python Agents
 
 Chainlit turns your python code into sharable app in a few lines of code.
 
-```python
+```python Code Example
 import chainlit as cl
 
 @cl.on_message # this function will be called every time a user inputs a message in the UI
