--- a/api-reference/ask-for-file.mdx
+++ b/api-reference/ask-for-file.mdx
@@ -24,9 +24,8 @@ If a project ID is configured, the messages will be uploaded to the cloud storag
 </ParamField>
 
 <RequestExample>
-```python
+```python Code Example
 from chainlit import send_message, ask_for_file, on_chat_start
-
 
 @on_chat_start
 def main():
