--- a/api-reference/ask-for-input.mdx
+++ b/api-reference/ask-for-input.mdx
@@ -21,7 +21,7 @@ If a project ID is configured, the messages will be uploaded to the cloud storag
 </ParamField>
 
 <RequestExample>
-```python
+```python Code Example
 from chainlit import send_message, ask_for_input, on_chat_start
 
 
