--- a/api-reference/send-text.mdx
+++ b/api-reference/send-text.mdx
@@ -19,9 +19,8 @@ This function sends a text element to the chatbot UI. If a project ID is configu
 </ParamField>
 
 <RequestExample>
-```python
+```python Code Example
 import chainlit as cl
-
 
 @cl.on_message
 def main(message: str):
