--- a/concepts/streaming/python.mdx
+++ b/concepts/streaming/python.mdx
@@ -5,7 +5,7 @@ title: Python Streaming
 Chainlit supports streaming with any Python code. Here is an example with `openai`.
 
 ## OpenAI Completion
-```python
+```python Code Example
 import openai
 from chainlit import on_message, start_stream, send_token, send_message, LLMSettings
 
@@ -53,7 +53,7 @@ def main(message: str):
 <video controls height="200" src="https://chainlit-cloud.s3.eu-west-3.amazonaws.com/docs/python_streaming.mp4" />
 
 ## OpenAI Chat Completion
-```python
+```python Code Example
 import openai
 import chainlit as cl
 
