--- a/cloud/config.mdx
+++ b/cloud/config.mdx
@@ -20,6 +20,12 @@ public = true
 
 # List of environment variables to be provided by each user to use the app.
 user_env = []
+
+# Hide the chain of thought details from the user in the UI.
+hide_cot = false
+
+# Limit the number of requests per user.
+#request_limit = "10 per day"
 ```
 
 <Note>If you do not see that config file, run `chainlit init` at the root of your app.</Note>
