--- a/cloud/config.mdx
+++ b/cloud/config.mdx
@@ -18,6 +18,9 @@ public = true
 # The project ID is required when public is set to false.
 #id = ""
 
+# Whether to enable telemetry (default: true). No personal data is collected.
+enable_telemetry = true
+
 # List of environment variables to be provided by each user to use the app.
 user_env = []
 
