--- a/langchain.mdx
+++ b/langchain.mdx
@@ -30,6 +30,8 @@ That's it. Now just run:
 ```bash
 chainlit run app.py -w
 ```
+<Warning>When using LangChain, caching is turned on by default! The cache lives in the .chainlit folder.</Warning>
+
 
 <Card title="Deployment" icon="link" href="/cloud/deploy">
    Learn how to deploy your agent to the cloud.
